--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -1,5 +1,5 @@
 
-server.port:8081
+server.port=8081
 
 #Eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
