--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -8,4 +8,5 @@ eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
 #Ribbon
-microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
+#comment this to make ribbon work with eureka
+#microservice-produits.ribbon.listOfServers=localhost:9001,localhost:9011
