--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -5,7 +5,7 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
 #Eureka
-#eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
 
 #Ribbon
 #comment this to make ribbon work with eureka
