--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,3 +1,6 @@
 server.port 9004
+
+spring.cloud.config.import-check.enabled=false
+
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
