--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,4 +1,5 @@
 server.port 9004
 
+zuul.routes.microservice-produits.url=http://localhost:9001/
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
