--- a/microservice-clientui.properties
+++ b/microservice-clientui.properties
@@ -1,6 +1,8 @@
 
 server.port=8080
 
+spring.main.allow-bean-definition-overriding=true
+
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
