--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,4 +1,6 @@
 server.port 9104
 
+zuul.routes.microservice-produits.url=http://localhost:9001
+
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
