--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -1,6 +1,7 @@
 server.port 9104
 
 zuul.routes.microservice-produits.url=http://localhost:9001
+zuul.routes.microservice-commandes.url=http://localhost:9002
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
