--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -2,6 +2,7 @@ server.port 9104
 
 zuul.routes.microservice-produits.url=http://localhost:9001
 zuul.routes.microservice-commandes.url=http://localhost:9002
+zuul.routes.microservice-paiement.url=http://localhost:9003
 
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
