--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -8,5 +8,6 @@ zuul.routes.microservice-paiement.url=http://localhost:9003
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
 
-#spring.security.user.name=utilisateur
-#spring.security.user.password=mdp
+#Spring Security
+spring.security.user.name=utilisateur
+spring.security.user.password=mdp 
