--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -8,5 +8,5 @@ zuul.routes.microservice-commandes.url=http://localhost:9002
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
 
 #Spring Security
-spring.security.user.name=utilisateur
-spring.security.user.password=mdp
+#spring.security.user.name=utilisateur
+#spring.security.user.password=mdp
