--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -4,9 +4,12 @@ zuul.routes.microservice-commandes.url=http://localhost:9002
 zuul.routes.microservice-produits.url=http://localhost:9001
 zuul.routes.microservice-paiement.url=http://localhost:9003
 
+
+
 #Eureka
 eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
 
+security.enable-csrf=false
 #Spring Security
 spring.security.user.name=utilisateur
 spring.security.user.password=mdp
